@@ -551,7 +551,6 @@ wincapc::init ()
     {
       ((wincaps *)caps)->needs_count_in_si_lpres2 = false;
       ((wincaps *)caps)->has_restricted_stack_args = false;
-      ((wincaps *)caps)->has_console_handle_problem = false;
     }
 
   __small_sprintf (osnam, "NT-%d.%d", version.dwMajorVersion,
